--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -7,6 +7,8 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  actions: write
+  deployments: write
 
 concurrency:
   group: pages
